--- a/roles/hadoop/tasks/main.yml
+++ b/roles/hadoop/tasks/main.yml
@@ -4,7 +4,7 @@
   register: exist_hdp_dir
 
 - name: 如果存在则将其删除
-  file: path={{ exist_hdp_dir }} state=absent
+  file: path={{ exist_hdp_dir.stdout }} state=absent
 
 - name: 安装Hadoop
   unarchive: src={{ item }} dest={{ installed_dir }}
