--- a/deploy-all.yml
+++ b/deploy-all.yml
@@ -30,6 +30,14 @@
       name: hadoop
     tags:
       - hdp
+
+- hosts: hdp_namenode
+  gather_facts: False
+  tasks:
+  - import_role:
+      name: ssh
+    tags:
+      - ssh
     
 - hosts: hdp_namenode
   gather_facts: False
