--- a/roles/ssh/tasks/main.yml
+++ b/roles/ssh/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: 生成一个临时空文件，用于远程拷贝
-  file: path={{ tmp_dir }}/a.tmp state=present
+  file: path={{ tmp_dir }}/a.tmp state=touch
 
 - name: 安装expect
   yum: name=expect state=present
