--- a/roles/hbase/tasks/main.yml
+++ b/roles/hbase/tasks/main.yml
@@ -22,6 +22,7 @@
     - hbase-site.xml.j2
     - regionservers.j2
     - backup-master.j2
+    - hostname.sh.j2
 
 - name: 不需要改动的配置文件放入对应目录
   copy: src=hbase-env.sh dest={{ hbase_dir.stdout }}/conf/hbase-env.sh
@@ -36,3 +37,7 @@
 
 - name: 将Hadoop相关配置文件拷贝到hbase配置目录
   copy: src={{ hadoop_dir.stdout }}/etc/hadoop/hdfs-site.xml dest={{ hbase_dir.stdout }}/conf/hdfs-site.xml
+
+- name: 修改主机名
+  shell: |
+    chmod +x {{ hbase_dir.stdout }}/conf/hostname.sh && {{ hbase_dir.stdout }}/conf/hostname.sh
