--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -52,6 +52,13 @@
     group: root
     mode: '0755'
 
+- name: 若2181端口被占用，则先停止
+  shell: |
+    pid=$(netstat -ntlp | grep 2181 | awk '{print $7}')
+    pid=${$pid/[^[0-9]*/''}
+    kill -9 $pid
+  ignore_errors: True
+
 - name: 启动zookeeper
   shell: |
     service zookeeper restart
