--- a/roles/hadoop/tasks/main.yml
+++ b/roles/hadoop/tasks/main.yml
@@ -29,6 +29,12 @@
     - hadoop-env.sh
     - yarn-env.sh
 
+- name: 不需要改动的配置文件放入对应目录
+  copy: src={{ item }} dest={{ hadoop_dir.stdout }}/sbin/{{ item }}
+  loop:
+    - start-dfs.sh
+    - stop-dfs.sh 
+
 - name: 查看/etc/profile文件中是否存在Hadoop环境变量
   shell: |
     grep -e "export HADOOP_HOME={{ hadoop_dir.stdout }}" /etc/profile
